--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,20 @@
-html, body {
-    height: 100%;
-    overflow: hidden;
-    position: relative;
+.gameContainer {
+    margin: 15px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+.logo {
+    text-align: center;
+    margin: 20px auto 0 auto;
+    font-size: 40px;
+}
+.button {
+    text-align: center;
+    margin: 10px auto;
+    font-size: 25px;
 }
 
 #game {
@@ -14,7 +27,6 @@ html, body {
     -webkit-user-select: none;
     position: relative;
     top: 50%;
-    transform: translateY(-50%);
 }
 .row {
     display: flex;
